Fixed header alignment issue

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 
-#top {
+#header {
 	margin-left: auto;
 	margin-right: auto;
 	padding-left:0px;
